--- a/Puzzle1 (Old Bridge)/style.css
+++ b/Puzzle1 (Old Bridge)/style.css
@@ -67,13 +67,15 @@ li#item-Janitor {
 
 .marker {
 	border: 1pt dotted grey;
-	height: 20px;
+	height: 50px;
+	line-height: 50px;
 }
 .bridge {
 	background-color: yellow;
 	border-bottom: 5pt solid orange;
 	text-align: center;
-	height: 50px;
+
+	height: 100px;
 }
 .safe-side, .unsafe-side {
 	padding: 0;
